add autocomplete to all add event tabs
Former-commit-id: 956284d16dba539db03f5da892f128d9535dafd6 [formerly 5a1100885859284fde6ed08ae00d699227f147e0] [formerly 5b6f83d5b08ae9301afaa892d67ab4c4cfc9c418 [formerly 5a73c35099ef92610447db4164328598656d07ad]]
Former-commit-id: 5961254b7ef4a15e72c69270958bcf734f2cb6c5 [formerly 1e499b0b54877cd63701746ef5b267a392285c22]
Former-commit-id: 18f07022ac4777ec96639f33950d0fe2a3d9a446

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -1586,7 +1586,7 @@
   margin-top: 7px !important;
   position: absolute;
   margin-left: 9px;"></i>
-      <input class="form-control calendar-form-controle" autofocus="" type="text" placeholder="{{_('add emails of guests')}}" id="taskTitle" ng-model="invite" style="margin-top:15px"  ng-keyup="$event.keyCode == 13&& addInvite(invite)"  typeahead="inviteResult as inviteResult.title  for inviteResult in inviteResults | filter:$viewValue | limitTo:8" typeahead-on-select="selectInviteResult()">
+       <input class="form-control calendar-form-controle" autofocus="" type="text" placeholder="{{_('add emails of guests')}}" id="taskTitle" ng-model="invite" style="margin-top:15px"  ng-keyup="$event.keyCode == 13&& addInvite(invite)"  typeahead="inviteResult as inviteResult.emails for inviteResult in inviteResults | filter:$viewValue | limitTo:8" typeahead-on-select="selectInviteResult()">
                                                        
                          </div>
                                                    <ul  style="list-style:none">
