hide the div who is involved in event show
Former-commit-id: 91c23ceb029d298b3e6b4a62166afbda3cdddafc [formerly 48b7ef2484b066b0c1d32c6bbe7c303f0295cb73] [formerly 2fb32a5ae491f711b155a5c24b804e2cf42f75bf [formerly 792588878cc307dd57fd76479e7dcd63c9925808]]
Former-commit-id: 8c249d056c6bf8d4c04063e1045ea056f169814e [formerly 1c82c4689cccb766378742f293162be2340862f4]
Former-commit-id: 221384b86ba4bc9d6e45e6fcc0a7a199030b7b13

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -252,14 +252,14 @@
     </div>
     <!-- tasks cards -->
     <div class="col-md-3 tasks-col">
-      <div class="row">
+ <!--      <div class="row">
         <div class="col-md-12">
           <div class="portlet showCard">
-            <div class="portlet-title line">
+            < <div class="portlet-title line">
               <div class="caption">
                 <i class="icon-user"></i>{{ _('Who is involved')}}
               </div>
-            </div>
+            </div> >
             <div class="portlet-body">
                 <ul class="chats">
                 </ul>
@@ -275,7 +275,7 @@
                   </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <!-- $ Events -->
     </div>
