[Contact - Show] [Lead - Show]- Issue in timezone ,fix #1865 , Generalize time zone setting on Calendar ,fix #1890
Former-commit-id: a73d3088a798e64783fb900b44b879fe01d1de16 [formerly 63b2cd9fa749837e5df16c1e6005587474a9d2cd] [formerly ba1cfd6e160c733f312fe5b4c2238d760066c67c [formerly 42b4dcf630475b19b508ecc5ecc76bb39e6bd9d4]]
Former-commit-id: ee52f99d78bb3f0f745737357fd1f62ec10c4142 [formerly ca0a74340cfa08bfdf021104086114ad96b59f92]
Former-commit-id: 9174e1e40bd506e9b0ef44553cf4883109d4960c

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -194,7 +194,8 @@
   </div>
   <div class="row">
     <div class="col-md-9">
-    
+        <!-- get timezone setting from user -->
+    <input type="hidden" value="{{user.timezone}}" id="timezone"/>
       <div class="row">
           <div class="showPage custom-show margin-bottom-15  col-md-12" style="padding-top: 0px;padding-left: 0px;padding-right: 0px;">
                 <div class="row margin-bottom-10" style="margin-left: 0px; margin-right: 0px;margin-bottom: 0px !important;">
