--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -221,6 +221,8 @@
             </span>
         </div>
     </div>
+    <!-- get timezone setting from user -->
+    <input type="hidden" value="{{user.timezone}}" id="timezone"/>
     <div class="row">
         <div class="col-md-9">
           <div class="row">
