--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -171,6 +171,10 @@
             </span>
         </div>
     </div>
+
+    <!-- get timezone setting from user -->
+    <input type="hidden" value="{{user.timezone}}" id="timezone"/>
+    
     <div class="row">
         <div class="col-md-9">
          
