we can't insert a phone number on related contact fixed! , fix #1877
Former-commit-id: 738ca31ee19ad23d91489630249a10cf0738c740 [formerly 9d95d3f8565428c7ac27164ab41115c9a195e2a2] [formerly f5c99d6932bc4260b852bb3acb3184e33b302e0e [formerly e8ce2273539a1d111730f3d0d3e34a6b5f9897d8]]
Former-commit-id: 62190b2a43b4ad6ce190692a680b271fd01243f6 [formerly 869d99100c6b509d84ef84028d9b4c26a2a17050]
Former-commit-id: 7d31434e73cc55e4bbfcc42bc4f07039382e1ec5

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -695,13 +695,12 @@
                     </div>
                     <div class="col-md-6">
                       <div class="right-col">
-                        <div ng-show="watsonUrl" class="news-blocks blank-card blank-card-black newsCard">
+                        <div ng-show="watsonUrl" class="news-blocks blank-card blank-card-black newsCard" style="height: auto !important;">
                             <h3 style="margin-top:0px; margin-bottom: 20px;">
                               <img src="/static/img/watson_logo.png" style="width: 35px;margin-top: -12px;">{{_(' IBM Watson Analysis')}}
                              </h3>
-                            <div class="news-block-tags" style="min-height: 300px;">
-                               <iframe src="<%=watsonUrl%>" style="border: none;width: 100%;height: 
-                               300px;">
+                            <div class="news-block-tags" style="height: auto !important;">
+                               <iframe src="<%=watsonUrl%>" style="border: none;width: 100%;height: 630px;">
                                 </iframe>                                           
                             </div>
 
