--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -2209,22 +2209,39 @@
                      <div class="portlet showPage rightCardContent">
                           <div class="col-md-12">
                                     <ul class="list-unstyled contactInfos">
-                                      <li ng-show="account.account_type">
+                                      <li >
                                         <span>
                                             {{_('Type:')}}
-                                            <a class="tag ng-binding" href="/#/search/type:Account #<%= account.account_type %>">
-                                                #<%= account.account_type %>
+                                            <a ng-hide="showEdit" ng-show="account.account_type" class="tag ng-binding" href="/#/search/type:Account #<%= account.account_type %>">
+                                                <%= account.account_type %>
                                             </a>
+                                             <a ng-show="showEdit">
+                                           <select value="Customer" ng-model="account.account_type" class="form-control" ng-blur="inlinePatch('Lead','', 'account_type',account.entityKey,account.account_type)" ng-enter="inlinePatch('Lead','', 'account_type',account.entityKey,account.account_type)">
+                                          <option value="" disabled selected>Select Account Type:</option>
+                                          <option value="Competitor">{{_('Competitor')}}</option><option value="Customer">{{_('Customer')}}</option><option value="Distributor">{{_('Distributor')}}</option><option value="Integrator">{{_('Integrator')}}</option><option value="Investor">{{_('Investor')}}</option><option value="Partner">{{_('Partner')}}</option><option value="Press">{{_('Press')}}</option><option value="Prospect">{{_('Prospect')}}</option><option value="Reseller">{{_('Reseller')}}</option><option value="Supplier">{{_('Supplier')}}</option><option value="Vendor">{{_('Vendor')}}</option><option value="Other">{{_('Other')}}</option></select> </a>
+
                                         </span>
                                       </li>
-                                      <li ng-show="account.industry">
+                                       
+                                      <li  >
                                         <span>
                                             {{_('Industry:')}}
-                                            <a class="tag ng-binding" href="/#/search/type:Account  #<%= account.industry %>">
-                                                #<%= account.industry %>
+                                            <a ng-hide="showEdit"  ng-show="account.industry" class="tag ng-binding" href="/#/search/type:Account  #<%= account.industry %>">
+                                                <%= account.industry %>
                                             </a>
+                                            <a ng-show="showEdit">
+                                            <form ng-show="showEdit" class="form-inline newLeadForm" role="form" style="  margin-right: 2px;display: inline-block;float: left;margin-bottom: 0px;">
+                                              <div class="input-icon">
+                                                   <input class="  form-control address-input" type="text" placeholder="Industry" style="padding-top: 0px;padding-bottom: 0px;height: 20px;border: none;padding-left: 0px !important; padding-right: 0px;text-align: center;" ng-model="account.industry" ng-blur="inlinePatch('Lead','', 'industry',account.entityKey,account.industry)" ng-enter="inlinePatch('Lead','', 'industry',account.entityKey,account.industry)">
+                                              </div>
+
+                                      </form>  </a>
+                                            
+                                            
+                                            
                                         </span>
                                       </li>
+                                      
                                       <li ng-show="account.owner">
                                         <span>
                                            {{_('Owner:')}}
