generalization of maping event
Former-commit-id: 7a12053af805b2661355c3163e9ce92fdc356ff9 [formerly 1edb75a4ce58ef9bd31cb015df83a3a5e3ce70b0] [formerly 6d558760446d752d4be38a57cec0bf2e45838851 [formerly fcb94966e1430a142004bdaac7fd6f5facbc6e11]]
Former-commit-id: ac5928ff14288dbe9ae9a0ff4f65fe42d4fd1e1c [formerly 9cd05e39969702216e0923a773592c2faf44818b]
Former-commit-id: 6f72b122230467ac0c088f2c42089d3d8411b8f5

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -1410,7 +1410,7 @@
                              </div>
         <div class=" inner-addon left-addon" style="margin-top:30px">
          <i class="glyphicon glyphicon-map-marker" style="color: rgba(0, 26, 131, 0.61); margin-top: -5px;"></i>
-          <input class="form-control calendar-form-controle" autofocus="" type="text" placeholder="{{_('Where?')}}" id="taskTitle" ng-model="ioevent.where" style="margin-top:15px">
+          <input class="form-control calendar-form-controle" autofocus="" type="text" placeholder="{{_('Where?')}}" id="pac-input2" ng-model="ioevent.where" style="margin-top:15px">
                   </div>
 
                             <div class=" inner-addon left-addon">
