Portuguese language, move hidden inpput in base.html
Former-commit-id: 0f6ee388d9fba177cc6ea858948a9addd278252d [formerly cc8091ede1b100649dce197d99a152a6a354fb7a] [formerly 6c29c7e364d03d70534496b061391f2f45435689 [formerly f6a41516378fc63eaf0ebdfafa8ce7f57ee3af17]]
Former-commit-id: 72f45e80f4453bb11a1e01fe026f0a2fa4435707 [formerly 66ddaac2bb3dce96f6ba495208ee7848f8bcebcd]
Former-commit-id: 5d97de45b787939641faa326798908d0103f203a

--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -290,7 +290,7 @@
                     <option value="en" >{{_('English')}} </option>
                     <option value="ar">{{_('Arabic')}}</option>
                     <option value="fr" >{{_('French')}}</option>
-                    <option value="pt_BR" >{{_('Portuguese')}}</option>
+                    <option value="pt_BR" >{{_('Portuguese/Brazil')}}</option>
                   </select>
                 </div>
               </div>
