--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -39,7 +39,7 @@
                 {{_('Leads')}}
               </h2>
               <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
-                <a class="headerBtn" title="Refresh" ng-click="refreshCurrent();"> 
+                <a class="headerBtn" title="{{_('Refresh')}}" ng-click="refreshCurrent();"> 
                       <i class="fa fa-repeat" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
                 <!--<a class="" title="Preview" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
@@ -48,22 +48,22 @@
                 <a class="" title="Share" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" href="#sharingSettingsModal" data-toggle="modal" ng-hide="selectedCards.length==0" ng-click="checkPermissions({{ME}})"> 
                       <i class="fa fa-share-square-o" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
-                <a href="" class="" title="Convert lead to contact" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="convertModal()" ng-hide=" selectedCards.length==0"> 
+                <a href="" class="" title="{{_('Convert lead to contact')}}" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="convertModal()" ng-hide=" selectedCards.length==0"> 
                       <i class="fa  fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
-                <a class="headerBtn" title="Add tags" ng-click="showAssigneeTags()" ng-hide=" selectedCards.length==0"> 
+                <a class="headerBtn" title="{{_('Add tags')}}" ng-click="showAssigneeTags()" ng-hide=" selectedCards.length==0"> 
                       + <i class="fa fa-tags"></i>
                 </a>
                 <!--<a class="" title="Print" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa fa-print" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>-->
-                <a class="headerBtn hide_md"  id="sample_editable_1_new_import" title="Import" ng-click="showImportModal()"> 
+                <a class="headerBtn hide_md"  id="sample_editable_1_new_import" title="{{_('Import')}}" ng-click="showImportModal()"> 
                       <i class="fa fa-cloud-upload"></i>
                 </a>
-                <a class="headerBtn hide_md" title="Export" id="sample_editable_1_new_export" ng-click="ExportCsvFile()"> 
+                <a class="headerBtn hide_md" title="{{_('Export')}}" id="sample_editable_1_new_export" ng-click="ExportCsvFile()"> 
                       <i class="fa fa-cloud-download"></i>
                 </a>
-                <a class="headerBtn" title="Delete"  ng-hide=" selectedCards.length==0" ng-click="editbeforedeleteselection()"> 
+                <a class="headerBtn" title="{{_('Delete')}}"  ng-hide=" selectedCards.length==0" ng-click="editbeforedeleteselection()"> 
                       <i class="fa fa-trash-o"></i>
                 </a>
                 <!--<a class="" title="More" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
@@ -114,24 +114,24 @@
                   <i class="fa fa-list" style="padding-top: 6px; font-size: 16px;" ng-show="show=='cards'"></i>
               </a>
               <div class="btn-group hide_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
-                  <a class="headerBtn" title="Filter/Sort options" data-toggle="dropdown"> 
+                  <a class="headerBtn" title="{{_('Filter/Sort options')}}" data-toggle="dropdown"> 
                       <i class="fa  fa-filter" style="padding-top: 6px; font-size: 16px;"></i>
                   </a>
                   <ul class="dropdown-menu drp-dwn-right">
-                    <li role="presentation" class="dropdown-header cus-dropdown-header">Filter by</li>
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">{{_('Filter by')}}</li>
                    <li class="ng-menu">
                         
-                        <a ng-click="leadFilterBy('all');"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': leadsfilter == 'all'}"></i>All leads</a>
+                        <a ng-click="leadFilterBy('all');"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': leadsfilter == 'all'}"></i>{{_('All leads')}}</a>
                     </li>
                     <li class="ng-menu">
-                        <a ng-click="leadFilterBy('my','{{ME}}');"> <i class="checkFilterMenu fa" ng-class="{'fa-check': leadsfilter == 'my'}"></i>My leads</a>
+                        <a ng-click="leadFilterBy('my','{{ME}}');"> <i class="checkFilterMenu fa" ng-class="{'fa-check': leadsfilter == 'my'}"></i>{{_('My leads')}}</a>
                     </li>
-                    <li role="presentation" class="dropdown-header cus-dropdown-header">Order by</li>
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">{{_('Order by')}}</li>
                     <li class="ng-menu">                      
-                      <a ng-click="orderBy('-updated_at')" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'updated_at'||order == '-updated_at'}"></i>Last modified</a>
+                      <a ng-click="orderBy('-updated_at')" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'updated_at'||order == '-updated_at'}"></i>{{_('Last modified')}}</a>
                     </li> 
                     <li class="ng-menu">                     
-                      <a ng-click="orderBy('lastname')" href="" > <i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'lastname'}"></i>Name</a>
+                      <a ng-click="orderBy('lastname')" href="" > <i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'lastname'}"></i>{{_('Name')}}</a>
                     </li>                   
                   </ul>
               </div>
@@ -150,7 +150,7 @@
             </div>
                {%for application in apps %}
                  {%if application.label =="Admin Console" %}
-                  <a  href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="Settings" style="margin-left: 20px; margin-right: 12px;" > 
+                  <a  href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="{{ _('Settings') }}" style="margin-left: 20px; margin-right: 12px;" > 
                       <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
                   </a>
                  {%endif%}
@@ -171,7 +171,7 @@
                         <li>
                         <a  href="/apps/{{ application.key.id() }}" class="" title="Settings" > 
                             <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
-                            Settings
+                            {{ _('Settings') }}
                         </a>
                         </li> 
                        {%endif%}
@@ -179,17 +179,17 @@
                      <li role="presentation" class="dropdown-header cus-dropdown-header">Filter by</li>
                    <li class="ng-menu">
                         
-                        <a ng-click="leadFilterBy('all');"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': leadsfilter == 'all'}"></i>All leads</a>
+                        <a ng-click="leadFilterBy('all');"><i class=" checkFilterMenu fa"  ng-class="{'fa-check': leadsfilter == 'all'}"></i>{{ _('All leads') }}</a>
                     </li>
                     <li class="ng-menu">
-                        <a ng-click="leadFilterBy('my','{{ME}}');"> <i class="checkFilterMenu fa" ng-class="{'fa-check': leadsfilter == 'my'}"></i>My leads</a>
+                        <a ng-click="leadFilterBy('my','{{ME}}');"> <i class="checkFilterMenu fa" ng-class="{'fa-check': leadsfilter == 'my'}"></i>{{ _('My leads') }}</a>
                     </li>
-                    <li role="presentation" class="dropdown-header cus-dropdown-header">Order by</li>
+                    <li role="presentation" class="dropdown-header cus-dropdown-header">{{ _('Order by') }}</li>
                     <li class="ng-menu">                      
-                      <a ng-click="orderBy('-updated_at')" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'updated_at'||order == '-updated_at'}"></i>Last modified</a>
+                      <a ng-click="orderBy('-updated_at')" href=""><i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'updated_at'||order == '-updated_at'}"></i>{{ _('Last modified') }}</a>
                     </li> 
                     <li class="ng-menu">                     
-                      <a ng-click="orderBy('lastname')" href="" > <i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'lastname'}"></i>Name</a>
+                      <a ng-click="orderBy('lastname')" href="" > <i class=" checkFilterMenu fa"  ng-class="{'fa-check': order == 'lastname'}"></i>{{ _('Name') }}</a>
                     </li>                                         
                   </ul>
               </div>           
