--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -1226,7 +1226,7 @@
                                     <div class="row" style="margin-left:80px">
                                     <div class="col-md-2" style="border-right: 1px solid #C5C2C2;margin-right: 36px;height: 53px;">
                                     <div style="margin-top:15px">
-                                      all day <div class="customCheckbox " class="form-group" style="
+                                      {{ _('all day')}} <div class="customCheckbox " class="form-group" style="
     margin-top: -14px;
     margin-left: 41px;
 ">  
@@ -1312,10 +1312,10 @@
   </span></li>
                                                    </ul>
                                                <ul style="list-style:none" ng-show="Guest_params">
-                                                 <li> <strong> Guests can:</strong> </li>
-                                                 <li><input type="checkbox" ng-checked="false"  ng-model="guest_modify" > modify event</li> 
-                                                 <li><input type="checkbox" ng-checked="true" ng-model="guest_invite" ng-disabled="guest_modify">invite others</li>
-                                                 <li><input type="checkbox" ng-disabled="guest_modify" ng-checked="true" ng-model="guest_list">see guest list</li>
+                                                 <li> <strong> {{ _('Guests can')}}:</strong> </li>
+                                                 <li><input type="checkbox" ng-checked="false"  ng-model="guest_modify" > {{ _('modify event')}}</li> 
+                                                 <li><input type="checkbox" ng-checked="true" ng-model="guest_invite" ng-disabled="guest_modify">{{ _('invite others')}}</li>
+                                                 <li><input type="checkbox" ng-disabled="guest_modify" ng-checked="true" ng-model="guest_list">{{ _('see guest list')}}</li>
                                                </ul>
 
                          
@@ -1326,7 +1326,7 @@
                                <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="  border: none !important;
   color: rgba(0, 0, 0, 0.44);">
-    Remind me  
+    {{ _('Remind me')}}  
     <span class="caret"></span>
   </button> <span ng-show="something_picked" style="  border: 1px solid rgba(10, 18, 168, 0.258824);
   padding: 3px;
@@ -1335,17 +1335,17 @@
   background-color: rgba(154, 157, 205, 0.258824);"> <%=remindme_show %><a href="" ng-click="deletePicked()" class=" calendar-close-invite"  style=" top: 2px !important;"></a></span> 
      <ul  class="list-inline"style="list-style:none" ng-show="remindmeby">
                                                  <li> <strong> By:</strong> </li>
-                                                 <li><input type="radio"  name="by" ng-model="method" value="email"> Email</li> 
-                                                 <li><input type="radio" ng- name="by" ng-model="method" value="sms">SMS</li>
+                                                 <li><input type="radio"  name="by" ng-model="method" value="email"> {{ _('Email')}}</li> 
+                                                 <li><input type="radio" ng- name="by" ng-model="method" value="sms">{{ _('SMS')}}</li>
                                                 
                                                </ul>
   <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">No notification</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> At time of event</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(2)">30 minutes before</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(3)">1 hour </a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(4)">1 day </a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(5)">1 week </a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">{{ _('No notification')}}</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> {{ _('At time of event')}}</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(2)">30 {{ _('minutes before')}}</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(3)">1 {{ _('hour')}} </a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(4)">1 {{ _('day')}} </a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(5)">1 {{ _('week')}} </a></li>
 
   </ul>
 </div>
