--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,7 +36,7 @@
       <td class="settingsTd">
             <div style=" padding-left: 10px;" class="pull-right">
                <div class="btn-group">
-                  <a  class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;"  href="#" data-toggle="dropdown" >
+                  <a  class="headerBtn hide_sm" title="{{ _('Help ') }}" style="margin-left: 20px; margin-right: 12px;"  href="#" data-toggle="dropdown" >
                     <i class="fa fa-question-circle" style="padding-top: 0px; font-size: 16px;vertical-align: text-top;"></i>
                   </a>
                    <ul class="dropdown-menu drp-dwn-right">
@@ -159,14 +159,14 @@
 	            <ul class="dropdown-menu drp-dwn-right " role="menu">
 	              <li>
 	               <a href="" ng-click="getImgFromCanvas('chartNormal')">
-	                   <i class="fa fa-print"></i>Print</a>
+	                   <i class="fa fa-print"></i> {{ _('Print') }}</a>
 	              </li>
 	            </ul>
 	    </div>
 	  	<div class="portlet">
 	  		<div class="portlet-title" style="margin-bottom:0px">
 	  			<div class="caption">
-	  				Opportunities by stage
+	  				 {{ _('Opportunities by stage') }}
 	  			</div>
 	  		</div>
 	  		<div class="portlet-body" style="padding:15px;">
@@ -182,14 +182,14 @@
 	            <ul class="dropdown-menu drp-dwn-right " role="menu">
 	              <li>
 	               <a href="" ng-click="getImgFromCanvas('chartNormal2')">
-	                   <i class="fa fa-print"></i>Print</a>
+	                   <i class="fa fa-print"></i>{{ _('Print') }}</a>
 	              </li>
 	            </ul>
 	    </div>
 	  	<div class="portlet">
 	  		<div class="portlet-title" style="margin-bottom:0px">
 	  			<div class="caption">
-	  				Leads by status
+	  				{{ _('Leads by status') }}
 	  			</div>
 	  		</div>
 	  		<div class="portlet-body"  style="padding:15px;">
@@ -211,7 +211,7 @@
 				</div>
 			</div>
 			<a class="more" href="#/leads/">
-			View more <i class="m-icon-swapright m-icon-white"></i>
+			{{ _('View more') }} <i class="m-icon-swapright m-icon-white"></i>
 			</a>
 		</div>
    </div>
@@ -225,11 +225,11 @@
 						 <%=total_amount|currency%> 
 					</div>
 					<div class="desc">
-						Forecastable Pipeline
+						{{ _('Forecastable Pipeline') }}
 					</div>
 				</div>
 				<a class="more" href="#/leads/">
-				View more <i class="m-icon-swapright m-icon-white"></i>
+				{{ _('View more') }} <i class="m-icon-swapright m-icon-white"></i>
 				</a>
 			</div>
 	   </div>
@@ -241,14 +241,14 @@
 	            <ul class="dropdown-menu drp-dwn-right " role="menu">
 	              <li>
 	               <a href="" ng-click="showImg(leadByOwnerChart.imgUrl)">
-	                   <i class="fa fa-print"></i>Print</a>
+	                   <i class="fa fa-print"></i>{{ _('Print') }}</a>
 	              </li>
 	            </ul>
 	    </div>
 	  	<div class="portlet">
 	  		<div class="portlet-title" style="margin-bottom:0px">
 	  			<div class="caption">
-	  				Leads per owner
+	  				 {{ _('Leads per owner') }}
 	  			</div>
 	  		</div>
 	  		<div class="portlet-body" id="scrollable-chart2">
@@ -264,14 +264,14 @@
 	            <ul class="dropdown-menu drp-dwn-right " role="menu">
 	              <li>
 	               <a href="" ng-click="showImg(chartForLeadsSource.imgUrl)">
-	                   <i class="fa fa-print"></i>Print</a>
+	                   <i class="fa fa-print"></i>{{ _('Print') }}</a>
 	              </li>
 	            </ul>
 	    </div>
 	  	<div class="portlet">
 	  		<div class="portlet-title" style="margin-bottom:0px">
 	  			<div class="caption">
-	  				Leads source
+	  				{{ _('Leads source') }}
 	  			</div>
 	  		</div>
 	  		<div class="portlet-body">
@@ -289,14 +289,14 @@
 		            <ul class="dropdown-menu drp-dwn-right " role="menu">
 		              <li>
 		               <a href="" ng-click="showImg(chartObject.imgUrl)">
-		                   <i class="fa fa-print"></i>Print</a>
+		                   <i class="fa fa-print"></i>{{ _('Print') }}</a>
 		              </li>
 		            </ul>
 		    </div>
 		  	<div class="portlet">
 		  		<div class="portlet-title" style="margin-bottom:0px">
 		  			<div class="caption">
-		  				Forecastable Pipeline per owner 
+		  				{{ _('Forecastable Pipeline per owner') }} 
 		  			</div>
 		  		</div>
 		  		<div class="portlet-body" id="scrollable-chart">
